solution for AoC 2022 'Day 17: Pyroclastic Flow' part 2