@@ -2,8 +2,6 @@ package pl.lsobotka.adventofcode;
 
 import java.io.BufferedReader;
 import java.io.FileReader;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -18,11 +16,11 @@ public class BaseTest {
         return input;
     }
 
-    public List<Integer> getFileInputAsIntegerList(String fileName) throws Exception {
-        return getFileInput(fileName).stream()
-                .reduce(String::concat)
-                .map(input -> input.split(","))
-                .map(arr -> Arrays.stream(arr).map(Integer::valueOf).collect(Collectors.toList()))
-                .orElse(Collections.emptyList());
+    public String getFileInputSingleLine(String fileName) throws Exception {
+
+        BufferedReader bufferedReader = new BufferedReader(new FileReader(RESOURCE_PATH.concat(fileName)));
+        List<String> input = bufferedReader.lines().toList();
+        bufferedReader.close();
+        return input.get(0);
     }
 }
